tests/reference/ast_new-async1-b3d07ed.stderr
syntax error: Token ':' is unexpected here
 --> tests/parser/async1.py:5:21
  |
5 |     async for x in y:
  |                     ^ 
